shame/tests/buffer_constraints_fail/atomic_in_storage_only.rs
fn main() { let _: shame::Buffer<shame::Atomic<u32>, shame::mem::Uniform> = todo!(); }
